package seedu.unienable.accessibility;

/** Three-state accessibility status for a facility feature or connection, so missing data is never read as YES. */
public enum AccessibilityStatus {
    YES,
    NO,
    UNKNOWN
}
