package seedu.unienable.accessibility;

/** Three-state shelter status for a connection, so missing data is never read as sheltered or unsheltered. */
public enum ShelterStatus {
    YES,
    NO,
    UNKNOWN
}
