package seedu.unienable.accessibility;

/** How a connection's route segment is physically travelled. */
public enum TraversalType {
    RAMP,
    SHELTERED_RAMP,
    LIFT,
    PATH,
    OTHER
}
